# social-net

./: .env.auth.example  .env.db_config.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  requirements.txt
docs/: arch.md
src/auth/adapters/: config.py  id_provider.py  password_hasher.py  token_encoder.py
src/auth/adapters/db/: config_loader.py  provider.py
src/auth/adapters/email_sender/: config.py  confirmation_token_sender.py  email_client.py
src/auth/adapters/gateway/: user.py
src/auth/adapters/rpc/: client.py  config.py  dispatcher.py  server.py
src/auth/application/: authorize_user.py  delete_user.py  me.py  register_user.py  verify_user.py
src/auth/application/common/: id_provider.py  password_hasher.py  token_sender.py  uow.py
src/auth/application/dto/: user.py
src/auth/application/errors/: common.py  jwt_errors.py  user_errors.py  user_request.py
src/auth/bootstrap/di/: container.py
src/auth/bootstrap/entrypoint/: fast_api.py
src/auth/models/: user.py
src/auth/posts/: main.py
src/auth/posts/mod/: models.py  schemas.py
src/auth/posts/mydb/: crud.py
src/auth/presentation/web/: exception_code.py  exception_message.py  register_exceptions.py
src/entrypoint/: container.py  fast_api.py
src/shared_services/adapters/gateway/: user.py
src/social_net/entrypoint/: container.py  fast_api.py
src/subscription/adapters/: gateway.py  id_provider.py  uow.py
src/subscription/application/: all_followers.py  follow.py  unfollow.py
src/subscription/models/: base.py  subscription.py
(+127 files in other folders)
